Made index.html structure

--- a/search.html
+++ b/search.html
@@ -4,6 +4,11 @@
         <title>Pokedex-Search! A01262284</title>
     </head>
     <body>
-        
+        <!-- Header -->
+        <header>
+            <h1>
+                Jose Alfonso Clarito - Pokedex!
+            </h1>
+        </header>
     </body>
 </html>
