Made search.html structure

--- a/search.html
+++ b/search.html
@@ -10,5 +10,19 @@
                 Jose Alfonso Clarito - Pokedex!
             </h1>
         </header>
+
+        <!-- Navbar -->
+        <nav>
+            <a class="navlink" href="">Home</a>
+            <a class="navlink" href="">Search</a>
+        </nav>
+
+        <!-- Footer -->
+        <footer>
+            <h5>
+                Copyright © FonseLULW; API from 
+                <a href="https://pokeapi.co/">pokeapi.co</a>
+            </h5>
+        </footer>
     </body>
 </html>
