--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@
 
         <!-- Pokemon Images -->
         <main>
-            <div class="image-container">
+            <div class="pokemon-container">
                 <img src="https://picsum.photos/300/200?random=3234">
             </div>
-            <div class="image-container">
+            <div class="pokemon-container">
                 <img src="https://picsum.photos/300/200?random=31234">
             </div>
-            <div class="image-container">
+            <div class="pokemon-container">
                 <img src="https://picsum.photos/300/200?random=32314">
             </div>
-            <div class="image-container">
+            <div class="pokemon-container">
                 <img src="https://picsum.photos/300/200?random=34234">
             </div>
-            <div class="image-container">
+            <div class="pokemon-container">
                 <img src="https://picsum.photos/300/200?random=32354">
             </div>
-            <div class="image-container">
+            <div class="pokemon-container">
                 <img src="https://picsum.photos/300/200?random=32634">
             </div>
-            <div class="image-container">
+            <div class="pokemon-container">
                 <img src="https://picsum.photos/300/200?random=32324">
             </div>
-            <div class="image-container">
+            <div class="pokemon-container">
                 <img src="https://picsum.photos/300/200?random=323664">
             </div>
-            <div class="image-container">
+            <div class="pokemon-container">
                 <img src="https://picsum.photos/300/200?random=323904">
             </div>
         </main>
@@ -55,5 +55,7 @@
                 <a href="https://pokeapi.co/">pokeapi.co</a>
             </h5>
         </footer>
+
+        <script src="index.js"></script>
     </body>
 </html>
