Implemented random pokemon images on index.html

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </nav>
 
         <!-- Pokemon Images -->
-        <main>
-            <div class="pokemon-container">
+        <main id="pokemon-grid">
+            <!-- <div class="pokemon-container">
                 <img src="https://picsum.photos/300/200?random=3234">
             </div>
             <div class="pokemon-container">
@@ -45,7 +45,7 @@
             </div>
             <div class="pokemon-container">
                 <img src="https://picsum.photos/300/200?random=323904">
-            </div>
+            </div> -->
         </main>
 
         <!-- Footer -->
