Styled index.html with CSS

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Pokedex-Home! A01262284</title>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <!-- Header -->
@@ -17,36 +18,8 @@
             <a class="navlink" href="">Search</a>
         </nav>
 
-        <!-- Pokemon Images -->
-        <main id="pokemon-grid">
-            <!-- <div class="pokemon-container">
-                <img src="https://picsum.photos/300/200?random=3234">
-            </div>
-            <div class="pokemon-container">
-                <img src="https://picsum.photos/300/200?random=31234">
-            </div>
-            <div class="pokemon-container">
-                <img src="https://picsum.photos/300/200?random=32314">
-            </div>
-            <div class="pokemon-container">
-                <img src="https://picsum.photos/300/200?random=34234">
-            </div>
-            <div class="pokemon-container">
-                <img src="https://picsum.photos/300/200?random=32354">
-            </div>
-            <div class="pokemon-container">
-                <img src="https://picsum.photos/300/200?random=32634">
-            </div>
-            <div class="pokemon-container">
-                <img src="https://picsum.photos/300/200?random=32324">
-            </div>
-            <div class="pokemon-container">
-                <img src="https://picsum.photos/300/200?random=323664">
-            </div>
-            <div class="pokemon-container">
-                <img src="https://picsum.photos/300/200?random=323904">
-            </div> -->
-        </main>
+        <!-- Pokemon Images (dynamic) -->
+        <main id="pokemon-grid"></main>
 
         <!-- Footer -->
         <footer>
