Designed home page

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 
         <!-- Navbar -->
         <nav>
-            <a class="navlink" href="">Home</a>
-            <a class="navlink" href="">Search</a>
+            <div class="navlink-container">
+                <a class="navlink" id="home" href="">Home</a>
+            </div>
+            <div class="navlink-container">
+                <a class="navlink" id="searc" href="">Search</a>
+            </div>
         </nav>
 
         <!-- Pokemon Images (dynamic) -->
