Finished design for home page

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
         <!-- Navbar -->
         <nav>
-            <div class="navlink-container">
-                <a class="navlink" id="home" href="">Home</a>
-            </div>
-            <div class="navlink-container">
-                <a class="navlink" id="searc" href="">Search</a>
-            </div>
+            <a class="navlink-container" id="home" href="">
+                <span class="navlink">Home</span>
+            </a>
+            <a class="navlink-container" id="search" href="">
+                <span class="navlink">Search</span>
+            </a>
         </nav>
 
         <!-- Pokemon Images (dynamic) -->
