--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a class="navlink-container" id="home" href="">
                 <span class="navlink">Home</span>
             </a>
-            <a class="navlink-container" id="search" href="">
+            <a class="navlink-container" id="search" href="search.html">
                 <span class="navlink">Search</span>
             </a>
         </nav>
