duplicated styles from home to search page

--- a/search.html
+++ b/search.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Pokedex-Search! A01262284</title>
+        <link rel="stylesheet" href="search.css">
     </head>
     <body>
         <!-- Header -->
@@ -24,5 +25,6 @@
                 <a href="https://pokeapi.co/">pokeapi.co</a>
             </h5>
         </footer>
+        <script src="search.js"></script>
     </body>
 </html>
