--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Pokedex-Home! A01262284</title>
+
+        <!-- Stylesheets -->
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
@@ -14,7 +16,7 @@
 
         <!-- Navbar -->
         <nav>
-            <a class="navlink-container" id="home" href="">
+            <a class="navlink-container" id="home" href="index.html">
                 <span class="navlink">Home</span>
             </a>
             <a class="navlink-container" id="search" href="search.html">
@@ -33,6 +35,7 @@
             </h5>
         </footer>
 
+        <!-- Scripts -->
         <script src="index.js"></script>
     </body>
 </html>
