--- a/search.html
+++ b/search.html
@@ -8,14 +8,18 @@
         <!-- Header -->
         <header>
             <h1>
-                Jose Alfonso Clarito - Pokedex!
+                Jose Alfonso Clarito - Pokedex Search!
             </h1>
         </header>
 
         <!-- Navbar -->
         <nav>
-            <a class="navlink" href="">Home</a>
-            <a class="navlink" href="">Search</a>
+            <a class="navlink-container" id="home" href="index.html">
+                <span class="navlink">Home</span>
+            </a>
+            <a class="navlink-container" id="search" href="search.html">
+                <span class="navlink">Search</span>
+            </a>
         </nav>
 
         <!-- Footer -->
@@ -25,6 +29,8 @@
                 <a href="https://pokeapi.co/">pokeapi.co</a>
             </h5>
         </footer>
+
+        <!-- Scripts -->
         <script src="search.js"></script>
     </body>
 </html>
