extracted duplicate css to universal.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Pokedex-Home! A01262284</title>
 
         <!-- Stylesheets -->
+        <link rel="stylesheet" href="universal.css">
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
