--- a/search.html
+++ b/search.html
@@ -2,7 +2,10 @@
 <html>
     <head>
         <title>Pokedex-Search! A01262284</title>
-        <link rel="stylesheet" href="search.css">
+
+        <!-- Stylesheets -->
+        <link rel="stylesheet" href="universal.css">
+        <!-- <link rel="stylesheet" href="search.css"> -->
     </head>
     <body>
         <!-- Header -->
