--- a/search.html
+++ b/search.html
@@ -35,10 +35,10 @@
 
                 <!-- Submenu -->
                 <div id="searchbyDropdown" class="dropdown-content">
-                    <button id="1" class="dropdown-btn">Name</button>
-                    <button id="2" class="dropdown-btn">Type</button>
-                    <button id="3" class="dropdown-btn">Ability</button>
-                    <button id="4" class="dropdown-btn">Generations</button>
+                    <button id="drop1" class="dropdown-btn">Name</button>
+                    <button id="drop2" class="dropdown-btn">Type</button>
+                    <button id="drop3" class="dropdown-btn">Ability</button>
+                    <button id="drop4" class="dropdown-btn">Generations</button>
                 </div>
             </div>
 
