extracted objects to universal.js

--- a/search.html
+++ b/search.html
@@ -38,12 +38,12 @@
                     <button id="drop1" class="dropdown-btn">Name</button>
                     <button id="drop2" class="dropdown-btn">Type</button>
                     <button id="drop3" class="dropdown-btn">Ability</button>
-                    <button id="drop4" class="dropdown-btn">Generations</button>
+                    <button id="drop4" class="dropdown-btn">Generation</button>
                 </div>
             </div>
 
         
-            <input type="text" placeholder="Search here...">
+            <input type="text" placeholder="Search here... (spell correctly!)">
             <button>Search</button>
         </section>
 
@@ -66,6 +66,7 @@
         </footer>
 
         <!-- Scripts -->
+        <script src="universal.js"></script>
         <script src="search.js"></script>
     </body>
 </html>
