--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         </footer>
 
         <!-- Scripts -->
+        <script src="universal.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
