--- a/html/index.html
+++ b/html/index.html
@@ -4,8 +4,8 @@
         <title>Pokedex-Home! A01262284</title>
 
         <!-- Stylesheets -->
-        <link rel="stylesheet" href="universal.css">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="../styles/universal.css">
+        <link rel="stylesheet" href="../styles/index.css">
     </head>
     <body>
         <!-- Header -->
@@ -37,7 +37,7 @@
         </footer>
 
         <!-- Scripts -->
-        <script src="universal.js"></script>
-        <script src="index.js"></script>
+        <script src="../scripts/universal.js"></script>
+        <script src="../scripts/index.js"></script>
     </body>
 </html>
