--- a/html/search.html
+++ b/html/search.html
@@ -4,8 +4,8 @@
         <title>Pokedex-Search! A01262284</title>
 
         <!-- Stylesheets -->
-        <link rel="stylesheet" href="universal.css">
-        <link rel="stylesheet" href="search.css">
+        <link rel="stylesheet" href="../styles/universal.css">
+        <link rel="stylesheet" href="../styles/search.css">
     </head>
     <body>
         <!-- Header -->
@@ -66,7 +66,7 @@
         </footer>
 
         <!-- Scripts -->
-        <script src="universal.js"></script>
-        <script src="search.js"></script>
+        <script src="../scripts/universal.js"></script>
+        <script src="../scripts/search.js"></script>
     </body>
 </html>
