adjusted css values

--- a/html/search.html
+++ b/html/search.html
@@ -44,10 +44,10 @@
 
         
             <input type="text" placeholder="Search here... (spell correctly!)">
-            <button>Search</button>
+            <button id="searchPokemon">Search</button>
         </section>
 
-        <!-- Pokemon search results -->
+        <!-- Pokemon search results (dynamic) -->
         <main id="pokemon-grid">
         
         </main>
