made reformat function, and POKEGENERATIONS

--- a/html/search.html
+++ b/html/search.html
@@ -43,7 +43,7 @@
             </div>
 
         
-            <input type="text" placeholder="Search here... (spell correctly!)">
+            <input type="text" placeholder="Search here... (spell correctly!)" id="query" autocomplete="off">
             <button id="searchPokemon">Search</button>
         </section>
 
