implemented generation, and ability searches

--- a/html/search.html
+++ b/html/search.html
@@ -31,11 +31,11 @@
 
             <!-- Dropdown menu -->
             <div class="dropdown">
-                <button id="searchbyCurrent">Name</button>
+                <button id="searchbyCurrent">Pokemon</button>
 
                 <!-- Submenu -->
                 <div id="searchbyDropdown" class="dropdown-content">
-                    <button id="drop1" class="dropdown-btn">Name</button>
+                    <button id="drop1" class="dropdown-btn">Pokemon</button>
                     <button id="drop2" class="dropdown-btn">Type</button>
                     <button id="drop3" class="dropdown-btn">Ability</button>
                     <button id="drop4" class="dropdown-btn">Generation</button>
