--- a/html/search.html
+++ b/html/search.html
@@ -54,7 +54,7 @@
 
         <!-- History -->
         <aside id="history">
-
+            <h4><span>Search History:</span></h4>
         </aside>
 
         <!-- Footer -->
