implemented search history clearing and deleting

--- a/html/search.html
+++ b/html/search.html
@@ -55,6 +55,7 @@
         <!-- History -->
         <aside id="history">
             <h4><span>Search History:</span></h4>
+            <button id="clear">Clear History</button>
         </aside>
 
         <!-- Footer -->
