implemented server using node and express

--- a/html/profile.html
+++ b/html/profile.html
@@ -4,7 +4,7 @@
         <title>Pokedex-Profile! A01262284</title>
 
         <!-- Stylesheets -->
-        <link rel="stylesheet" href="../styles/universal.css">
+        <link rel="stylesheet" href="universal.css">
         <!-- <link rel="stylesheet" href="../styles/profile.css"> -->
     </head>
 
@@ -29,27 +29,28 @@
         <!-- Main -->
         <main id="content">
             <!-- Image -->
+            <figure id="pImg"></figure>
             <!-- Name -->
-            <h2>Victini</h2>
+            <h2 id="pName">Victini</h2>
             <!-- Type  -->
-            <div>
-                <h3>Type</h3>
-                <div>Grass</div>
-                <div>Rock</div>
+            <div id="pTypes">
+                <h3>Types</h3>
             </div>
             <!-- Stats -->
-            <div>
+            <div id="pStats">
                 <h3>Stats</h3>
-                <div>Height</div>
-                <div>Weight</div>
             </div>
             <!-- Abilities -->
-            <div>
+            <div id="pAbilities">
                 <h3>Abilities</h3>
-                <div>Sturdy</div>
             </div>
             <!-- Generation -->
-            <div>Generation 5</div>
+            <div id="pGen">Generation 5</div>
+            <!-- Others -->
+            <div>
+                <div id="pHeight"></div>
+                <div id="pWeight"></div>
+            </div>
         </main>
 
         <!-- Footer -->
