Added media queries for responsive pokemon grid - universal-mq.css

--- a/html/search.html
+++ b/html/search.html
@@ -9,6 +9,7 @@
         <!-- Stylesheets -->
         <link rel="stylesheet" href="universal.css">
         <link rel="stylesheet" href="search.css">
+        <link rel="stylesheet" href="universal-mq.css">
     </head>
     <body>
         <!-- Header -->
