--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
         <!-- Stylesheets -->
         <link rel="stylesheet" href="universal.css">
         <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="universal-mq.css">
     </head>
     <body>
         <!-- Header -->
