Edited text - index.html, search.html

--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
         <!-- Header -->
         <header>
             <h1>
-                Jose Alfonso Clarito - Pokedex!
+                Jose Alfonso Clarito - Home!
             </h1>
         </header>
 
