--- a/html/search.html
+++ b/html/search.html
@@ -15,7 +15,7 @@
         <!-- Header -->
         <header>
             <h1>
-                Jose Alfonso Clarito - Pokedex Search!
+                Jose Alfonso Clarito - Search!
             </h1>
         </header>
 
