--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
         <title>Pokedex-Home! A01262284</title>
 
         <!-- Stylesheets -->
-        <link rel="stylesheet" href="universal.css">
-        <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="universal-mq.css">
+        <link rel="stylesheet" href="/styles/universal.css">
+        <link rel="stylesheet" href="/styles/index.css">
+        <link rel="stylesheet" href="/styles/universal-mq.css">
     </head>
     <body>
         <!-- Header -->
@@ -21,10 +21,10 @@
 
         <!-- Navbar -->
         <nav>
-            <a class="navlink-container" id="home" href="index.html">
+            <a class="navlink-container" id="home" href="/">
                 <span class="navlink">Home</span>
             </a>
-            <a class="navlink-container" id="search" href="search.html">
+            <a class="navlink-container" id="search" href="html/search.html">
                 <span class="navlink">Search</span>
             </a>
             <a class="navlink-container" id="timeline" href="/timeline">
@@ -44,7 +44,7 @@
         </footer>
 
         <!-- Scripts -->
-        <script src="universal.js"></script>
-        <script src="index.js"></script>
+        <script src="/scripts/universal.js"></script>
+        <script src="/scripts/index.js"></script>
     </body>
 </html>
