Created search page route - server.js

--- a/public/html/search.html
+++ b/public/html/search.html
@@ -24,7 +24,7 @@
             <a class="navlink-container" id="home" href="/">
                 <span class="navlink">Home</span>
             </a>
-            <a class="navlink-container" id="search" href="html/search.html">
+            <a class="navlink-container" id="search" href="/search">
                 <span class="navlink">Search</span>
             </a>
             <a class="navlink-container" id="timeline" href="/timeline">
