--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,9 @@
         </footer>
 
         <!-- Scripts -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="/scripts/universal.js"></script>
+        <script src="/scripts/events.js"></script>
         <script src="/scripts/index.js"></script>
     </body>
 </html>
