--- a/public/html/search.html
+++ b/public/html/search.html
@@ -21,7 +21,7 @@
 
         <!-- Navbar -->
         <nav>
-            <a class="navlink-container" id="home" href="/">
+            <a class="navlink-container" id="home" href="/home">
                 <span class="navlink">Home</span>
             </a>
             <a class="navlink-container" id="search" href="/search">
