Created login form

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -39,7 +39,7 @@
         <footer>
             <h5>
                 Copyright © FonseLULW; API from 
-                <a href="https://pokeapi.co/">pokeapi.co</a>
+                <a href="https://stormy-temple-14536.herokuapp.com">myMockAPI</a>
             </h5>
         </footer>
 
