Retracted to using the pokeAPI on the site

--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -51,7 +51,7 @@
     <footer>
         <h5>
             Copyright © FonseLULW; API from
-            <a href="https://stormy-temple-14536.herokuapp.com">myMockAPI</a>
+            <a href="https://pokeapi.co">pokeAPI</a>
         </h5>
     </footer>
 
