Created a frontend logout button

--- a/public/html/search.html
+++ b/public/html/search.html
@@ -30,6 +30,9 @@
             <a class="navlink-container" id="timeline" href="/timeline">
                 <span class="navlink">Timeline</span>
             </a>
+            <a class="navlink-container" id="logout" href="/auth/logout">
+                <span class="navlink">Logout</span>
+            </a>
         </nav>
 
         <!-- Searchbar section -->
