Implemented empty cart function

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -24,6 +24,9 @@
             <a class="navlink-container" id="home" href="/home">
                 <span class="navlink">Home</span>
             </a>
+            <a class="navlink-container" id="user" href="/user">
+                <span class="navlink">Profile</span>
+            </a>
             <a class="navlink-container" id="search" href="/search">
                 <span class="navlink">Search</span>
             </a>
